--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,6 +19,7 @@
 body {
   color: var(--foreground);
   background: var(--background);
+  font-family: "Plus Jakarta Sans", sans-serif;
 }
 
 .custom-phone-input {
