--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -67,3 +67,7 @@ body {
 .custom-checkbox input:checked + .checkmark::after {
   display: block;
 }
+
+.cursor-custom {
+  cursor: url("/images/close.png") 10 10, auto;
+}
