--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -69,5 +69,5 @@ body {
 }
 
 .cursor-custom {
-  cursor: url("/images/close.png") 10 10, auto;
+  cursor: url("/images/close-red.png") 9 9, auto;
 }
