--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -76,6 +76,9 @@ body {
   display: block;
 }
 
-.cursor-custom {
+/* .cursor-custom {
   cursor: url("/images/close-red.png") 9 9, auto;
 }
+img {
+  mix-blend-mode: multiply;
+} */
